--- a/src/screens/home/Home.css
+++ b/src/screens/home/Home.css
@@ -1,5 +1,5 @@
 /* 2 Column Grid */
 .grid-container {
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: 25% 25% 25% 25%;
 }
