--- a/src/screens/details/Details.css
+++ b/src/screens/details/Details.css
@@ -27,7 +27,7 @@
 .restaurant_category_details{
     display: flex;
     flex-direction: row;
-    margin: 20px;
+    margin-left: 30px;
 }
 
 .eachItemList{
@@ -42,6 +42,7 @@
 .restaurant_category_details_2{
     width:35%;
     margin-left: 100px;
+    margin-top: 40px;
 }
 
 .restaurant_category_details_1{
