--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -41,6 +41,17 @@
     padding-right: 10px;
     padding-left: 10px;
   }
+
+  .loggedin-box {
+    display:flex;
+    justify-content: flex-end;
+    align-items: center;
+    width:auto;
+    height:40px;
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+
   .myModal {
     position:absolute;
     width:auto;
@@ -52,4 +63,14 @@
   }
   .errMsg {
       color:red;
+  }
+  .buttonStyle {
+      color:greenyellow;
+  }
+  .header-loggedin {
+    flex:1;
+    display:flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-right: 20px;
   }
