--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -5,10 +5,23 @@
   }
 
 @media only screen and (max-width: 600px) {
+   
     .header {
-        background-color: #263238;
-        display:flex;
+      background-color: #263238;
+      height: 115px;
+      display:flex;
+      flex-direction: column;
+      justify-content: flex-start;
     }
+    .header-login {
+      flex:1;
+      display:flex;
+      justify-content: flex-start !important;
+      align-items: center;
+      margin: 5px;
+    
+    }
+  
 }   
 
   .header-logo {
